crates/aranya-policy-compiler/tests/data/structs/substruct_rhs_not_defined_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
6 |     let new_struct = x substruct Bar
  |                                  ^^^ struct `Bar` not defined
